[tool.poetry]
name = "coverage-perf-demo"
version = "0.1.0"
description = ""
authors = ["detoyz <ivan@workgenius.com>"]
readme = "README.md"
packages = [{include = "coverage_perf_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
coverage = "^7.0.3"
uvloop = "^0.17.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.46"}
aiosqlite = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-p no:anyio"  # to not conflict with pytest-asyncio
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
concurrency = [
    "greenlet",  # https://github.com/nedbat/coveragepy/issues/1012
]
